--- a/TodoList/Views/Shared/_Layout.cshtml
+++ b/TodoList/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - All rights reserved.</p>
+            <p>PlanIt &copy; @DateTime.Now.Year - All rights reserved.</p>
         </footer>
     </div>
 
