--- a/TodoList/Views/Account/Register.cshtml
+++ b/TodoList/Views/Account/Register.cshtml
@@ -4,6 +4,9 @@
     ViewBag.Title = "- Register";
 }
 
+<link href="~/Content/css-folder/account/register.css" rel="stylesheet" type="text/css" />
+
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -82,117 +85,3 @@
     }
 </script>
 
-<style>
-    .register-page {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background-color: #f5f5f5;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 110vh;
-        margin: 0;
-    }
-
-    h2 {
-        color: #333;
-        font-weight: 600;
-        text-align: center;
-        margin-bottom: 30px;
-    }
-
-    h4 {
-        color: #666;
-        font-weight: 400;
-        text-align: center;
-    }
-
-    h6 {
-        color: #888;
-        font-weight: 300;
-        text-align: center;
-    }
-
-    .form-horizontal {
-        background-color: #fff;
-        padding: 40px;
-        border-radius: 10px;
-        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-        max-width: 400px;
-        width: 100%;
-    }
-
-    .form-group {
-        margin-bottom: 20px;
-    }
-
-    .control-label {
-        font-weight: 500;
-        color: #333;
-        display: block;
-        margin-bottom: 5px;
-        text-align: left;
-    }
-
-    .form-control {
-        border-radius: 5px;
-        padding: 10px;
-        border: 1px solid #ccc;
-        width: 100%;
-        font-size: 16px;
-    }
-
-        .form-control:focus {
-            border-color: #007bff;
-            box-shadow: 0 0 8px rgba(0, 123, 255, 0.2);
-        }
-
-    .btn-success {
-        background-color: #5cb85c;
-        color: #fff;
-        padding: 10px 105px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-    }
-
-        .btn-success:hover {
-            background-color: #4cae4c;
-            color: #fff;
-        }
-
-    p {
-        font-size: 14px;
-        color: #666;
-        text-align: center;
-    }
-
-    a {
-        color: #007bff;
-        text-decoration: none;
-    }
-
-        a:hover {
-            text-decoration: wavy;
-        }
-
-    .col-md-10 {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .input-group-append {
-        display: flex;
-        margin-right: 10px;
-        align-items: center; /* Dikey ortalama */
-    }
-
-        .input-group-append .btn {
-            margin-left: 170px;
-        }
-
-    .text-left {
-        text-align: left;
-    }
-</style>
