--- a/TodoList/Views/Todo/Index.cshtml
+++ b/TodoList/Views/Todo/Index.cshtml
@@ -4,6 +4,8 @@
     ViewBag.Title = "- Todo List";
 }
 
+<link href="~/Content/css-folder/todo/index.css" rel="stylesheet" type="text/css" />
+
 
 <a href="@Url.Action("Create")" class="add-todo-btn">Add New Todo</a>
 
@@ -48,124 +50,3 @@
     }
 
 </table>
-
-<style>
-    /* Genel Ayarlar */
-body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f8f9fa;
-    margin: 0;
-    padding: 0;
-}
-
-.table {
-    max-width: 1100px;
-    margin: 50px auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-}
-
-h2 {
-    font-size: 2em;
-    color: #2c3e50;
-    margin-bottom: 20px;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    border-bottom: 2px solid #2980b9;
-    padding-bottom: 10px;
-}
-
-/* Tablo Tasarımı */
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-bottom: 20px;
-    background-color: #f4f7f6;
-}
-
-th, td {
-    padding: 12px 15px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-}
-
-th {
-    background-color: #2980b9;
-    color: #34495e;
-    font-size: 1.1rem;
-    text-transform: uppercase;
-}
-
-td {
-    font-size: 1rem;
-    color: #34495e;
-}
-
-.displayfor-items:hover {
-    background-color: #f1f1f1;
-}
-
-/* Aksiyon Butonları */
-.action-btn {
-    display: inline-block;
-    padding: 8px 15px;
-    font-size: 0.9rem;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 5px;
-    margin: 0 5px;
-    transition: background-color 0.3s ease;
-}
-
-.btn-edit {
-    background-color: #27ae60;
-    color: #fff;
-}
-
-.btn-edit:hover {
-    background-color: #219150;
-    color: #fff;
-}
-
-.btn-delete {
-    background-color: #e74c3c;
-    color: #fff;
-}
-
-.btn-delete:hover {
-    background-color: #c0392b;
-    color: #fff;
-}
-
-.btn-details {
-    background-color: #3498db;
-    color: #fff;
-}
-
-.btn-details:hover {
-    background-color: #2980b9;
-    color: #fff;
-}
-
-.add-todo-btn {
-    display: block;
-    width: 200px;
-    padding: 10px;
-    font-size: 1rem;
-    color: #fff;
-    background-color: #3498db;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 5px;
-    margin: 20px auto;
-    transition: background-color 0.3s ease;
-}
-
-.add-todo-btn:hover {
-    background-color: #2980b9;
-    color: #fff;
-}
-</style>
